fix z-index of settings pop-up

--- a/src/components/other/other.css
+++ b/src/components/other/other.css
@@ -133,6 +133,7 @@
     background-color: white;
     text-align: center;
     position: absolute;
+    z-index: 2;
     font-size: small;
     width: auto;
     right: 15px;
